feat:유저의 그룹 슬롯 하루 데이터 조회 api